--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "http-server ./" 
   },
   "author": "",
+  "devDependencies": {
+    "http-server": "^0.9.0"
+  }
 }
