--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "server": "http-server ./" 
+    "server": "http-server ./"
   },
   "author": "",
   "devDependencies": {
     "http-server": "^0.9.0"
+  },
+  "dependencies": {
+    "angular-chart.js": "^1.0.2"
   }
 }
